# telemetry-radio

./: CMakeLists.txt  PROJECT.md  README.md
common/usb_host/: CMakeLists.txt  idf_component.yml  telemetry_ubs_device.c  usb_cdc_manager.c  usb_cdc_manager.h  usb_host_queue.c  usb_host_queue.h
ground_unit/tx_module/: CMakeLists.txt  crsf_protocol.c  crsf_protocol.h  elrs_tx_host.c  elrs_tx_host.h  elrs_tx_params.c  elrs_tx_params.h  elrs_tx_uart.c  elrs_tx_uart.h
main/: CMakeLists.txt  class_driver.c  class_driver.h  device_queue.c  device_queue.h  example.c  main.c  telemetry_uart.c  telemetry_uart.h  telemetry_ubs_device.c  telemetry_ubs_device.h  telemetry_udp_support.c  telemetry_udp_support.h  telemetry_wifi.c  telemetry_wifi.h  uart.c  uart.h  usb_cdc.c  usb_cdc.h  usb_cdc_example_main.c
